--- a/Ödev2.html
+++ b/Ödev2.html
@@ -19,7 +19,7 @@
     <div class="wrapper">
       <div class="search-input">
         <a href="" target="_blank" hidden></a>
-        <input type="text" onclick="show()" onfocusout="closee()" placeholder="Type to search..">
+        <input type="text" onclick="show()" onfocusout="closee()" placeholder="Search for everything">
         <div class="autocom-box">
           <!-- javascripten gelen liste buraya eklenicek -->
         </div>
